Correct spacing of bio text

--- a/public/style.css
+++ b/public/style.css
@@ -59,7 +59,7 @@ body {
   padding-left: 5%;
   padding-right: 5%;
   position: absolute;
-  top: 25%;
+  top: 28%;
 }
 
 #tab:hover {
